<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Game table-->
    <RelativeLayout
        android:layout_above="@+id/layout_game_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_table"
        android:padding="10dp">

        <!--Dealer game table-->
        <LinearLayout
            android:layout_above="@+id/space_center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColor="@color/dealer"
                android:text="@string/text_dealer"/>

            <TextView
                android:id="@+id/dealer_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/dealer"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:text="@string/text_dealer_score"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_dealer"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <GridView android:id="@+id/card_dealer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="5"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <!--Game table space-->
        <View
            android:id="@+id/space_center"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@color/line" />

        <!--Player game table-->
        <LinearLayout
            android:layout_below="@+id/space_center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/player"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/text_player"/>

                <TextView
                    android:id="@+id/player_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/player"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_player"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <GridView android:id="@+id/card_player"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="5"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <!--footer button-->
    <LinearLayout
        android:id="@+id/layout_game_controller"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/primary_text_light"
            android:onClick="onClickDraw"
            android:text="@string/btn_draw" />

        <Button
            android:id="@+id/btn_battle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/primary_text_light"
            android:onClick="onClickBattle"
            android:text="@string/btn_battle" />
    </LinearLayout>
</RelativeLayout>